...
  };
  const onViewableItemsChanged = React.useCallback(({viewableItems}) => {
    setItem(JSON.stringify(viewableItems.map(item => item.index)[0]));
  }, []);

  return (
    <View testID="tasksScreen" style={styles.container}>
      <FlatList
        initialScrollIndex={userProgess}
        onScrollToIndexFailed={onScrollToIndexFailed}
        snapToInterval={screenWidth(100)}
        decelerationRate="fast"
        horizontal
...
        viewabilityConfig={{
          itemVisiblePercentThreshold: 50,
        }}
        renderItem={({item}) => {
          return (
            <View
              testID={'microtasks'}
              key={item.source.toString()}
              style={styles.picture}>
              {item.type == 'image' ? (
                <>
                  <Image style={styles.image} source={item.source} />
                  <Header navigation={navigation} />
...
